--- a/OldiOS/OldiOS.Web/Properties/launchSettings.json
+++ b/OldiOS/OldiOS.Web/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "windowsAuthentication": false,
       "anonymousAuthentication": true,
       "iisExpress": {
-        "applicationUrl": "http://localhost:15361",
+        "applicationUrl": "http://0.0.0.0:15361",
         "sslPort": 44308
       }
     },
